@@ -1,3 +1,8 @@
+2003-02-18  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* ntoskrnl/cm/regfile.c (CmiRemoveSubKey): Kill warnings.
+	(CmiMergeFree): Ditto.
+
 2003-02-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* include/structs.h (OSVERSIONINFOEXA): Expand definition of
